<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingHorizontal="25dp"
    android:paddingTop="50dp"
    tools:context="com.example.converter.presentation.view.CurrencyFragment">

    <TextView
        android:id="@+id/text_convert_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/convert_from"
        android:textAppearance="@style/Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_convert_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="4dp"
        android:text="@string/convert_to"
        android:textAppearance="@style/Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/from_dropdown" />

    <TextView
        android:id="@+id/from_dropdown"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/select_box"
        android:hint="@string/select_a_currency"
        android:padding="10dp"
        android:text=""
        android:textColor="@color/text_color_black_light"
        android:textColorHint="@color/hint_color"
        android:textSize="18sp"
        app:drawableEndCompat="@drawable/baseline_arrow_drop_down_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_convert_from" />

    <TextView
        android:id="@+id/to_dropdown"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/select_box"
        android:hint="@string/select_a_currency"
        android:padding="10dp"
        android:text=""
        android:textColor="@color/text_color_black_light"
        android:textColorHint="@color/hint_color"
        android:textSize="18sp"
        app:drawableEndCompat="@drawable/baseline_arrow_drop_down_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_convert_to" />

    <TextView
        android:id="@+id/text_amount_to_convert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="28dp"
        android:text="@string/amount_to_convert"
        android:textAppearance="@style/Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/to_dropdown" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_text_amount"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text=""
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_amount_to_convert" />

    <TextView
        android:id="@+id/text_conversion_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingStart="4dp"
        android:text="@string/conversion_rate"
        android:textAppearance="@style/Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_amount" />

    <TextView
        android:id="@+id/conversion_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text=""
        android:textColor="@color/conversion_text"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_conversion_rate" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_convert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/convert_button"
        android:padding="12dp"
        android:text="@string/convert"
        android:textColor="@color/button_text"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
